# random-art

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  pyproject.toml
app/: canvas.py  coord.py  main.py  turtle.py
tests/data/: canvas_data.py  coord_data.py  turtle_data.py
tests/unit/: test_canvas.py  test_coord.py  test_random_turtle.py
