[tool.poetry]
name = "Random Art"
version = "0.1.0"
description = "Generating random artwork from Logo rules."
authors = ["Jacob Rainbow <jacobrainbow@Jacobs-MacBook-Pro.local>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.19.2"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
