[tool.poetry]
name = "scikage_test"
version = "0.1.0"
description = ""
authors = ["Jacob Rainbow <jacobrainbow@Jacobs-MacBook-Pro.local>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
