[tool.poetry]
name = "random-art"
version = "0.1.0"
description = ""
authors = ["Jacob Rainbow <jacobrainbow@Jacobs-MacBook-Pro.local>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
assertpy = "^1.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
